--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Генератор Датасетов NILM</title>
     <link rel="stylesheet" href="styles.css">
+    <!-- Chart.js и адаптер для дат -->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns/dist/chartjs-adapter-date-fns.bundle.min.js"></script>
+    <!-- УБРАЛИ Hammer.js и chartjs-plugin-zoom -->
 </head>
 <body>
     <h1>Генератор Датасетов для NILM</h1>
@@ -21,14 +25,12 @@
                     </select>
                 </div>
 
-                <!-- НОВОЕ: Область для отображения и редактирования конфига -->
                 <div class="form-group">
                     <label for="config-content">Содержимое конфигурации (можно редактировать):</label>
                     <textarea id="config-content" rows="15" readonly placeholder="Выберите файл конфигурации для просмотра..."></textarea>
                     <div id="config-error" class="error-message" style="display: none;"></div>
                 </div>
 
-                 <!-- НОВОЕ: Кнопка сохранения и поле комментария (изначально скрыты) -->
                  <div id="save-section" style="display: none;">
                     <div class="form-group">
                         <label for="save-comment">Комментарий к изменениям (опционально):</label>
@@ -36,10 +38,7 @@
                     </div>
                     <button type="button" id="save-config-button">Сохранить как новый конфиг</button>
                 </div>
-
-
-                <hr> <!-- Разделитель -->
-
+                <hr>
                 <button type="submit" id="generate-button">Запустить Генерацию (с текущим конфигом)</button>
             </form>
         </section>
@@ -50,6 +49,31 @@
             <pre id="process-log"></pre>
         </section>
     </div>
+
+    <hr> 
+
+    <section class="visualization">
+        <h2>Визуализация Датасетов</h2>
+        <div class="form-group">
+            <label for="dataset-select">Выберите датасет для визуализации:</label>
+            <select id="dataset-select" name="datasetFile">
+                <option value="" disabled selected>Загрузка списка датасетов...</option>
+            </select>
+        </div>
+        
+        <!-- ВОЗВРАЩАЕМ ПОЛЕ ЛИМИТА СТРОК -->
+        <div class="form-group inline-group"> 
+            <label for="chart-row-limit">Лимит строк для графика:</label>
+            <input type="number" id="chart-row-limit" value="5000" min="100" max="100000" step="100">
+        </div>
+
+        <button type="button" id="load-chart-button" disabled>Загрузить и Показать График</button>
+        <div id="chart-message" class="status-message" style="margin-top: 10px; display: none;"></div>
+        <div class="chart-container" style="position: relative; height:60vh; width:90vw; margin-top: 20px; margin-left: auto; margin-right: auto;">
+            <canvas id="dataset-chart"></canvas>
+        </div>
+        <!-- УБРАЛИ подсказку про зум -->
+    </section>
 
     <script src="script.js"></script>
 </body>
